kubernetes/k8s-bulletinboard/solutions/ads/ads-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-app
  labels:
    component: ads
    module: app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ads
      module: app
  template:
    metadata:
      labels:
        component: ads
        module: app
    spec:
      volumes:
      - name: ads-app-properties
        configMap:
          name: ads-app-config-files
      imagePullSecrets:
      - name: artifactory
      containers:
      - name: ads
        image: cc-k8s-course.docker.repositories.sap.ondemand.com/k8s/bulletinboard-ads:latest
        ports:
        - containerPort: 8080
          name: ads-app
        volumeMounts:
        - mountPath: /config/
          name: ads-app-properties
