kubernetes/k8s-bulletinboard/solutions/ads/ads-db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ads-db-headless
  labels:
    component: ads
    module: db
spec:
  ports:
  - port: 5432
    name: ads-db
  clusterIP: None
  selector:
    component: ads
    module: db
