kubernetes/k8s-bulletinboard/solutions/ads/ads-app-ingress-rsr.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ads-app-ingress
  labels:
    component: ads
    module: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bulletinboard--part-bf91e3ea.ingress.wdfcw43a.k8s-train.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /ads
        backend:
          serviceName: ads-service
          servicePort: ads-app
