kubernetes/k8s-bulletinboard/solutions/ads/ads-app-ingress-test.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ads-app-ingress
  labels:
    component: ads
    module: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bulletinboard--d035958-2.ingress.ccdev01.k8s-train.shoot.canary.k8s-hana.ondemand.com
    http: 
      paths: 
      - path: /ads
        backend: 
          serviceName: ads-service
          servicePort: ads-app
