kubernetes/k8s-bulletinboard/solutions/ads/ads-db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ads-db-access
  labels:
    component: ads
    module: db
spec:
  podSelector:
    matchLabels:
      component: ads
      module: db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: ads
          module: app
